# tensacode-py

./: ARCHITECTURE  ARCHITECTURE.md  README.md  pyproject.toml  tensacode_ops.py
.old/: random.py  random2.py
.old/old5/_internal/: code2str.py  decorators.py  depends.py  tcir.py  typing.py
.old/old5/base/: base_engine.py
.old/old5/llm/: llm_engine.py
.old/old6/: types.py
examples/prompt-optimization/: pyproject.toml
examples/prompt-optimization/prompt_optimization/: __main__.py  optimize.py
examples/tensacode-agent/: ARCHITECTURE.md  pyproject.toml
examples/tensacode-operating-system/: pyproject.toml
examples/tensagame/: pyproject.toml
examples/tensaware/: pyproject.toml
tensacode/: engine.py
tensacode/_internal/: code2str.py  decorators.py  depends.py  misc.py  oo.py  python.py  sugar.py  typing.py
tensacode/base/: base_engine.py
tensacode/base/mixins/: supports_choice.py  supports_combine.py  supports_correct.py  supports_create.py  supports_decide.py  supports_decode.py  supports_encode.py  supports_modify.py  supports_predict.py  supports_query.py  supports_retrieve.py  supports_run.py  supports_semantic_transfer.py  supports_similarity.py  supports_split.py  supports_store.py  supports_style_transfer.py
tensacode/core/base/: base_context.py  (+2 more)
tensacode/internal/: consts.py  latent.py  param_tags.py  schema.py  tagged_object.py
tensacode/llm/: deps.py
tensacode/nn/: deps.py  nn_engine.py
tensacode/utils/: code2str.py  decorators.py  fp.py  latent_types.py  misc.py  object_types.py  python.py  tcir.py  types.py  unique.py
(+151 files in other folders)
