[tool.poetry]
name = "tensacode"
version = "0.1.0"
description = "TensaCode: Neural Networks + Language Models + Introspection = Programming 2.0"
authors = ["Jacob Valdez <jacob.valdez@tensaco.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tensacode" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
glom = "^23.5.0"
python-box = "^7.1.1"
pydantic = "2.5.0"
typingx = "^0.6.0"
inspect-mate-pp = "^0.0.4"
jinja2 = { version = "^3.1.3", extras = ["llm"] }
inflect = { version = "^7.2.0", extras = ["llm"] }
langchain = { version = "^0.1.16", extras = ["llm"] }
dspy-ai = { version = "^2.4.5", extras = ["llm"] }
ivy = { version = "^0.0.9.0", extras = ["nn"] }
jax = { version = "^0.4.26", extras = ["nn"] }
python-depends = "^0.1.4"

[tool.poetry.extras]
tensorcode_llm = ["tensorcode.llm"]
tensacode_nn = ["tensacode.nn"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
